--- a/stretch-assignment/digital_timer/styles.css
+++ b/stretch-assignment/digital_timer/styles.css
@@ -2,6 +2,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .digit {
